# vus-lens

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  SCIENTIFIC_INTEGRITY.md  pyproject.toml
NOTES/: anecdotes.md
backend/vus_lens/: __init__.py  config.py  pipeline.py
backend/vus_lens/acmg/: __init__.py  aggregate.py  clinvar.py  criteria.py  frequency.py  insilico.py  thresholds.py
backend/vus_lens/auditor/: __init__.py  core.py  repeat_loci.py
backend/vus_lens/clients/: __init__.py  base.py  clinicaltrials.py  gnomad.py  myvariant.py  turkish_variome.py
backend/vus_lens/models/: __init__.py  evidence.py  variant.py
backend/vus_lens/reasoning/: __init__.py  client.py  findings.py  layers.py  prompts.py
backend/vus_lens/web/: __init__.py  app.py  variants.py
backend/vus_lens/web/static/: cohort.html  index.html  live.html  validation.html
data/cohort/: cohort_result.json
data/turkish_variome/: README.md  build_index.py  demo_genes.txt  provenance.json  subset.parquet
data/validation/: gt_2star.json  gt_3star.json
deploy/: RUNBOOK.md  nginx-vuslens.conf  vuslens.env.example  vuslens.service
frontend/: .gitkeep
scripts/: cohort_batch.py  evaluate_variants.py  ground_truth_validation.py  reasoning_demo.py  verify_sources.py
tests/: test_acmg_aggregate.py  test_acmg_clinvar.py  test_acmg_frequency.py  test_acmg_insilico.py  test_auditor.py  test_reasoning.py
