[project]
name = "vus-lens"
version = "0.1.0"
description = "VUS Confidence Auditor — clinical-genetics decision support that audits the reliability of its own evidence, with ancestry-aware confidence warnings from live public data."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Özge Çavuş" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "pydantic>=2.9",
    "pyarrow>=18.0",
    "pandas>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# The importable package lives under backend/ (top-level backend/frontend split).
[tool.hatch.build.targets.wheel]
packages = ["backend/vus_lens"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
